--- a/starter.html
+++ b/starter.html
@@ -31,13 +31,13 @@
 <!-- PRIMEIRO NAVBAR - INICIO -->
     <nav class="navbar navbar-expand-xl mynavblue border">
       <div class="container">      
-      <a class="navbar-brand" href="index.php" style="border-bottom: 0;"><img class="img-fluid" style="max-width: 100%; height: auto;" src="imagens/logoomeumercado90.png"></a>
+      <a class="navbar-brand" href="index.php" style="border-bottom: 0;"><img class="img-fluid" src="imagens/logoomeumercado90.png"></a>
         <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarSite">
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSite">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
+            <li class="nav-item"><a class="nav-link" href="sobre.html">Sobre</a></li>
             <li class="nav-item"><a class="nav-link" href="loginparceiro.php"><i class="fas fa-lock"></i> Área do Parceiro</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
             <li class="nav-item"><a class="nav-link" href="#" style="border-bottom: 0;"><i class="fab fa-facebook"></i></a></li>
