vdexplica ainda errro na responsiva

--- a/vdexplica.html
+++ b/vdexplica.html
@@ -24,11 +24,17 @@
     <style>
       /* IMAGEM DE FUNDO PARA O CONTAINER PRINCIPAL*/
       .big-banner {
-        background-image: url("imagens/fundo_index.jpg");
-        background-repeat: no-repeat;
-        background-position: bottom;
-        background-size: 100%;
+        background-image: url("imagens/bg_vdexplica.jpg");
+        background-repeat: repeat;
+        
+        background-size: 30%;
       }
+            /* ALTERAÇÃO: .CARD */
+    	.cardform {
+    		background-color: #ffcc00;
+    		box-shadow: 3px 6px 8px 3px rgba(100, 100, 100, 0.7);
+    	}
+
     </style>
   </head>
   <body>
@@ -107,37 +113,68 @@
 <!-- MODAL PRECISA DE AJUDA? NAVBAR - FINAL -->
 
 
+<!-- VÍDEOS - INÍCIO -->
+<div class="container-fluid pt-4 mt-4 pb-4 big-banner" style="width: 90%;">
 
-
-
-<div class="container-fluid big-banner rounded shadow" style="width: 90%; margin-top: 30px;">
-  <div class="row pt-3 pb-3 pl-3 pr-3">
-    <div class="col-sm-8">
-    </div>
-    <div class="col-sm-4">
-      <div class="embed-responsive embed-responsive-16by9 shadow">
-        <iframe class="embed-responsive-item rounded border" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
+  <div class="container-fluid ml-5 bg-white border shadow" style="width: 85%;">
+    <div class="row pt-3 pb-1 pl-2 cardform">
+      <div class="col-5">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
+        </div>
+        </div>
+      <div class="col-7">
+        <p class="text-justify">Seja bem-vindo! 
+          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
+          Tempo aproximado. 00:50 </p>
       </div>
     </div>
   </div>
+  <div class="container-fluid mr-5 bg-white border shadow" style="width: 85%; margin-top: 30px;">
+    <div class="row pt-3 pb-1 pl-2 cardform">
+      <div class="col-7">
+        <p class="text-justify">Seja bem-vindo! 
+          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
+          Tempo aproximado. 00:50 </p>
+        </div>
+        <div class="col-5">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid ml-5 bg-white border shadow" style="width: 85%; margin-top: 30px;">
+    <div class="row pt-3 pb-1 pl-2 cardform">
+      <div class="col-5">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
+        </div>
+        </div>
+      <div class="col-7">
+        <p class="text-justify">Seja bem-vindo! 
+          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
+          Tempo aproximado. 00:50 </p>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid mr-5 bg-white border shadow" style="width: 85%; margin-top: 30px;">
+    <div class="row pt-3 pb-1 pl-2 cardform">
+      <div class="col-7">
+        <p class="text-justify">Seja bem-vindo! 
+          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
+          Tempo aproximado. 00:50 </p>
+        </div>
+        <div class="col-5">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
+          </div>
+      </div>
+    </div>
+  </div>
+
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- VÍDEOS - FINAL -->
 
 
 
