--- a/saibamais.html
+++ b/saibamais.html
@@ -226,6 +226,23 @@
 <!-- CARDS DE INFORMAÇÕES DO SAIBA MAIS ---- FINAL | PARTE 1 -->
 
 
+
+
+<!--sistema de avaliações
+cupons de desconto (desconto por indicação)
+sistema de entregas (horário definido, entrega terceirizada)
+lista de compras
+gratuidade
+-->
+
+
+
+
+
+
+
+
+
 <!-- CARDS DE INFORMAÇÕES DO SAIBA MAIS ---- INÍCIO | PARTE 2 -->
 <div class="container-fluid principal mt-3">
   <div class="row">
