--- a/vdexplica.html
+++ b/vdexplica.html
@@ -26,15 +26,18 @@
       .big-banner {
         background-image: url("imagens/bg_vdexplica.jpg");
         background-repeat: repeat;
-        
         background-size: 30%;
       }
-            /* ALTERAÇÃO: .CARD */
-    	.cardform {
-    		background-color: #ffcc00;
-    		box-shadow: 3px 6px 8px 3px rgba(100, 100, 100, 0.7);
-    	}
-
+      .borda {
+        padding-right: 20px;
+        padding-left: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-bottom: 2px solid #808080;
+        border-left: 2px solid #808080;
+        border-right: 2px solid #808080;
+        border-top: 2px solid #808080;
+      }
     </style>
   </head>
   <body>
@@ -114,65 +117,59 @@
 
 
 <!-- VÍDEOS - INÍCIO -->
-<div class="container-fluid pt-4 mt-4 pb-4 big-banner" style="width: 90%;">
-
-  <div class="container-fluid ml-5 bg-white border shadow" style="width: 85%;">
-    <div class="row pt-3 pb-1 pl-2 cardform">
-      <div class="col-5">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
-        </div>
-        </div>
-      <div class="col-7">
-        <p class="text-justify">Seja bem-vindo! 
-          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
-          Tempo aproximado. 00:50 </p>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid mr-5 bg-white border shadow" style="width: 85%; margin-top: 30px;">
-    <div class="row pt-3 pb-1 pl-2 cardform">
-      <div class="col-7">
-        <p class="text-justify">Seja bem-vindo! 
-          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
-          Tempo aproximado. 00:50 </p>
-        </div>
-        <div class="col-5">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
-          </div>
-      </div>
-    </div>
-  </div>
-  <div class="container-fluid ml-5 bg-white border shadow" style="width: 85%; margin-top: 30px;">
-    <div class="row pt-3 pb-1 pl-2 cardform">
-      <div class="col-5">
+<div class="container-fluid pt-4 mt-4 pb-4 big-banner shadow" style="width: 95%;">
+  <div class="container-fluid ml-3 bg-white border shadow" style="width: 90%;">
+    <div class="row pt-3 pb-3 pl-2 shadow-lg">
+      <div class="col-xl-5">
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
         </div>
-        </div>
-      <div class="col-7">
-        <p class="text-justify">Seja bem-vindo! 
-          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
-          Tempo aproximado. 00:50 </p>
+      </div>
+      <div class="col-xl-7">
+        <p class="text-justify ml-2 mr-2 mt-2 borda">Você está no OMeuMercado, seja muito bem-vindo! Começar a vender online com OMeuMercado é muito fácil! Como nosso parceiro, você não paga mensalidades e nem custo de implantação, você só paga após vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na página principal da plataforma e em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas ao seu comércio, assista o próximo vídeo para saber o passo-a-passo das vendas. Não fique fora desta, é uma grande oportunidade que só OMeuMercado lhe proporciona. Cadastre-se já!
+        </p>
       </div>
     </div>
   </div>
-  <div class="container-fluid mr-5 bg-white border shadow" style="width: 85%; margin-top: 30px;">
-    <div class="row pt-3 pb-1 pl-2 cardform">
-      <div class="col-7">
-        <p class="text-justify">Seja bem-vindo! 
-          Olá, você está no omeumercado, seja bem-vindo! Começar a vender online com omeumercado é muito fácil! Como nosso parceiro, você não paga mensalidade e não terá custo de implantação, você só paga quando vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na plataforma em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas no seu comércio, assista o próximo vídeo para saber o passo a passo das vendas. Não fique fora desta, é uma grande oportunidade que só omeumercado lhe proporciona. Cadastre-se já! 
-          Tempo aproximado. 00:50 </p>
+  <div class="container-fluid mr-3 mt-3 bg-white border shadow" style="width: 90%;">
+    <div class="row pt-3 pb-3 pl-2 shadow-lg">
+      <div class="col-xl-7">
+        <p class="text-justify ml-2 mr-2 mt-2 borda">Você está no OMeuMercado, seja muito bem-vindo! Começar a vender online com OMeuMercado é muito fácil! Como nosso parceiro, você não paga mensalidades e nem custo de implantação, você só paga após vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na página principal da plataforma e em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas ao seu comércio, assista o próximo vídeo para saber o passo-a-passo das vendas. Não fique fora desta, é uma grande oportunidade que só OMeuMercado lhe proporciona. Cadastre-se já!
+        </p>
+      </div>
+      <div class="col-xl-5">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
         </div>
-        <div class="col-5">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
-          </div>
       </div>
     </div>
   </div>
-
+  <div class="container-fluid ml-3 mt-3 bg-white border shadow" style="width: 90%;">
+    <div class="row pt-3 pb-3 pl-2 shadow-lg">
+      <div class="col-xl-5">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col-xl-7">
+        <p class="text-justify ml-2 mr-2 mt-2 borda">Você está no OMeuMercado, seja muito bem-vindo! Começar a vender online com OMeuMercado é muito fácil! Como nosso parceiro, você não paga mensalidades e nem custo de implantação, você só paga após vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na página principal da plataforma e em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas ao seu comércio, assista o próximo vídeo para saber o passo-a-passo das vendas. Não fique fora desta, é uma grande oportunidade que só OMeuMercado lhe proporciona. Cadastre-se já!
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid mr-3 mt-3 bg-white border shadow" style="width: 90%;">
+    <div class="row pt-3 pb-3 pl-2 shadow-lg">
+      <div class="col-xl-7">
+        <p class="text-justify ml-2 mr-2 mt-2 borda">Você está no OMeuMercado, seja muito bem-vindo! Começar a vender online com OMeuMercado é muito fácil! Como nosso parceiro, você não paga mensalidades e nem custo de implantação, você só paga após vender, estamos aqui para crescermos juntos, conquistar clientes e aumentar suas vendas. Para iniciar, faça seu cadastro na página principal da plataforma e em pouco tempo sua loja virtual será criada ficando disponível para os seus clientes. Ajudaremos você a fazer publicidade, a vender melhor seus produtos e atingir mais clientes, daremos todo o suporte para isto. Incorpore mais este canal de vendas ao seu comércio, assista o próximo vídeo para saber o passo-a-passo das vendas. Não fique fora desta, é uma grande oportunidade que só OMeuMercado lhe proporciona. Cadastre-se já!
+        </p>
+      </div>
+      <div class="col-xl-5">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/zvNSL-Uecpg" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- VÍDEOS - FINAL -->
 
