--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSite">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="sobre.php">Sobre</a></li>
-            <li class="nav-item"><a class="nav-link" href="loginparceiro.php"><i class="fas fa-lock"></i> Área do Parceiro</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.php"><i class="fas fa-lock"></i> Área do Parceiro</a></li>
             <li class="nav-item"><a class="nav-link" href="contato.php">Contato</a></li>
             <li class="nav-item"><a class="nav-link" href="#" style="border-bottom: 0;"><i class="fab fa-facebook"></i></a></li>
             <li class="nav-item"><a class="nav-link" href="#" style="border-bottom: 0;"><i class="fab fa-instagram"></i></a></li>
@@ -30,7 +30,7 @@
             <li class="nav-item"><a class="nav-link" href="saibamais.php">Saiba mais</a></li>
             <li class="nav-item"><a class="nav-link" href="vdexplica.php">Vídeos Explicativos</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Exemplo do seu E-Commerce</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Olá Cliente!</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Mais algo</a></li>
             <li class="nav-item"><a class="nav-link" href="faq.php">FAQ</a></li>
             <li class="nav-item"><a class="nav-link" href="#" data-toggle="modal" data-target="#modalnavbar">Precisa de Ajuda?</a></li>
           </ul>
@@ -55,7 +55,7 @@
         <p>- Sobre, é a idéia geral sobre seu OMeuMercado, algumas explicações, história, missão e valores;</p>
         <p>- Área do Parceiro, é uma área exclusiva para o Parceiro cadastrado fazer a administração do seu MarketPlace, também disponível no próprio local;</p>
         <p>- Contato, é onde você pode enviar um formuálio com dúvidas, sugestões e também onde encontrar nossos telefones e emails para você poder falar conosco;</p>
-        <p>- Ícones de Facebook, Instagram e Youtube são nossos canais sociais, entre lá e siga-nos, deixe mensagens e compartilhe nossas publicações;</>
+        <p>- Ícones de Facebook, Instagram e Youtube são nossos canais sociais, entre lá e siga-nos, deixe mensagens e compartilhe nossas publicações;</p>
         <p>- Botão Quero fazer compras, é onde o cliente amigo pode procurar um estabelecimento credenciado (Parceiro) para fazer compras;</p>
         <p>- Saiba mais, são explicações, funcionalidades, ...</p>
         <p>- Vídeos Explicativos, decidimos incorporar vídeos explicativos pois são mais elucidativos, práticos, e de forma geral rápidos para o entendimento de como funciona a Plataforma OMeuMercado;</p>
@@ -65,7 +65,7 @@
         <h6>Obrigado por estar conosco!</h6>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-info" data-dismiss="modal">Fechar</button>
       </div>
     </div>
   </div>
