--- a/parceiro/header.html
+++ b/parceiro/header.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
 
+    <script src="https://kit.fontawesome.com/9c8d73ada2.js" crossorigin="anonymous"></script>
+
     <!-- Custom do Parceiro -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- Place your kit's code here -->
-    <script src="https://kit.fontawesome.com/9c8d73ada2.js" crossorigin="anonymous"></script>
+    <!-- NavBar Icon Badge -->
+    <link rel="stylesheet" href="css/navbariconbadge.css">
 
     <!--Ícone da Página-->
     <link rel="shortcut icon" href="/imagens/omeumercado.ico">
